# flappy-mcp

./: LICENSE  README.md  pyproject.toml
examples/: flappy_tool.py
src/flappy_mcp/: __init__.py  __main__.py  core.py  fastapi_app.py  models.py  tool.py
tests/: test_cli.py  test_core.py
